# zed-php-mago

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  extension.toml
.github/workflows/: release.yml
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
php-mago/: Cargo.toml  extension.toml
php-mago/src/: lib.rs
src/: lib.rs
